<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="connect_usb">Connect a USB storage</string>
    <string name="pref_title_USB">External USB Library</string>
    <string name="pref_key_USB">pref_usb</string>
    <string name="autoUpdate_checkbox">Auto Update</string>
    <string name="install_mxplayer">Install "com.mxtech.videoplayer.pro" on the device to use this feature</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="app_name"><![CDATA[aengBee]]></string>
    <string name="browse_title"><![CDATA[Android TV]]></string>
    <string name="related_movies">Related Items</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="popular_header"></string>

    <string name="more_samples">Settings</string>
    <string name="grid_view">Vertical Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Settings</string>
    <string name="watch_trailer_1">Start</string>
    <string name="watch_trailer_2">Play</string>
    <string name="rent_1">Play</string>
    <string name="rent_2">with Video</string>
    <string name="buy_1">Related</string>
    <string name="buy_2">Item</string>
    <string name="queue_name">Play Queue</string>

    <string name="search_results">Search results for \'%1$s\'</string>
    <string name="no_search_results">No search results found for \'%1$s\'</string>
    <string name="catalog_url">https://storage.googleapis.com/android-tv/android_tv_videos_new.json</string>

    <!-- Error messages -->
    <string name="videos_loading_error">Failed to load videos. Please check your network connection.</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- Global Search -->
    <!-- The action label for global search -->
    <string name="global_search">GLOBALSEARCH</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Leanback API Demo</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search for videos</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Leanback API Demo Videos</string>

    <!-- Strings related to guided sequence activity -->

    <string name="OPTION_NAMES1">Update</string>
    <string name="OPTION_NAMES2">Delete</string>
    <string name="OPTION_NAMES3">Back</string>
    <string name="OPTION_DESCRIPTIONS1">Update DB</string>
    <string name="OPTION_DESCRIPTIONS2">Delete DB</string>
    <string name="OPTION_DESCRIPTIONS3">Select Other DB</string>
    <string name="guidedstep_first_title">Database List</string>
    <string name="guidedstep_first_description">Select the database to edit</string>
    <string name="guidedstep_first_breadcrumb">Database Settings</string>
    <string name="guidedstep_second_title">Update or Delete?</string>
    <string name="guidedstep_second_description">Selected Database :</string>
    <string name="guidedstep_second_breadcrumb">Database Action</string>
    <string name="guidedstep_third_title">Confirm the action</string>
    <string name="guidedstep_third_breadcrumb">Action Confirmation</string>
    <string name="guidedstep_third_command">You want to </string>
    <string name="guidedstep_letsdoit">Let\'s do it</string>
    <string name="guidedstep_nevermind">Never mind</string>
    <string name="guidedstep_action_description">The description can be quite long as well.
        Just be sure to set multilineDescription to true in the GuidedAction.
    </string>
    <string name="guidedstep_action_title">
        Note that Guided Actions can have titles that are quite long.
    </string>
    <string name="guidedstep_continue">Continue</string>
    <string name="guidedstep_cancel">Cancel</string>

    <string name="guidedstep_serveraddress">Server Address</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmDelete">Do you really want to delete the DB?</string>
    <string name="confirmNew">Do you really want to make a new DB?</string>
    <string name="newDB">New Database</string>
    <string name="enterDB">Enter the address</string>
    <string name="header_icon">Header icon</string>

    <string name="mobile_welcome_title">No Support for the Mobile App</string>
    <string name="mobile_welcome_description">Currently there is no support plan for the mobile app of the aengBee! If this screen shown, try opening this app on an Android TV again.</string>

    <!-- Strings related to onboarding -->
    <string name="onboarding_title_welcome">Welcome</string>
    <string name="onboarding_title_design">How to Voice-Search</string>
    <string name="onboarding_title_simple">Easy to use</string>
    <string name="onboarding_title_project">Let\'s check it out!</string>

    <string name="onboarding_description_welcome">The aengBee is designed for Android TV and users who want to organize personal media and explorer and player it.</string>
    <string name="onboarding_description_design">Whenever you want to search, just press the search button on remote control and say it. Then, the search results pop up.</string>
    <string name="onboarding_description_simple">it\'s really easy. Just press the button on the remote control to move on the screen and search and play! That\'s all. Easy, isn\'t it?</string>
    <string name="onboarding_description_project">Are you ready for the app? Let\'s get started!</string>
    <string name="pref_title_settings">App Settings</string>
    <string name="pref_title_recommendations">Recommendations</string>
    <string name="pref_key_recommendations">pref_recommendations</string>
    <string name="pref_title_mixing">Mixing Feature</string>
    <string name="pref_key_mixing">pref_mixing</string>
    <string name="pref_title_screen_signin">Please Login</string>
    <string name="pref_title_login_description">Please enter your username and password</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_login">pref_login</string>
    <string name="pref_title_login">Login</string>
    <string name="pref_key_server_setting">pref_server_setting</string>
    <string name="pref_title_server_setting">Server Settings</string>
    <string name="playback_tag">PLAYBACK_TAG</string>
    <!-- Error messages -->
    <string name="implement_search">Implement your own in-app search.</string>
    <string name="card_examples_title">Card Examples</string>
    <string name="detail_view_title">DetailView Example</string>
    <string name="action_cicked">Action clicked. Implement your own handler.</string>
    <string name="grid_example_title">Image Grid Example</string>
    <string name="video_grid_example_title">Video Grid Example</string>
    <string name="videos_url">https://storage.googleapis.com/android-tv/android_tv_videos_new.json</string>
    <string name="action_buy">Buy </string>
    <string name="action_wishlist">Add to wishlist</string>
    <string name="action_related">Related</string>
    <string name="header_related">Related Items</string>
    <string name="header_recommended">Recommended</string>

    <!-- Page/List Row -->

    <!-- Dialog example -->
    <string name="dialog_example_title">Use Google\'s location service?</string>
    <string name="dialog_example_description">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="dialog_example_button_positive">Agree</string>
    <string name="dialog_example_button_negative">Disagree</string>
    <string name="dialog_example_button_toast_positive_clicked">\'Agree\' clicked.</string>
    <string name="dialog_example_button_toast_negative_clicked">\'Disagree\' clicked.</string>

    <!-- Wizard example -->
    <string name="wizard_example_choose_rent_options">Choose rent options</string>
    <string name="wizard_example_watch_hd">Watch in HD on supported devices</string>
    <string name="wizard_example_watch_sd">Watch in standard definition on the web and supported devices</string>
    <string name="wizard_example_rental_period">Rental period: start within 30 days,\nfinish within 24 hours</string>
    <string name="wizard_example_input_card">Enter credit card number</string>
    <string name="wizard_example_expiration_date">Exp. date</string>
    <string name="wizard_example_payment_method">Payment Method</string>
    <string name="wizard_example_rent">Rent</string>
    <string name="wizard_example_rent_hd">Rent HD</string>
    <string name="wizard_example_rent_sd">Rent SD</string>
    <string name="wizard_example_processing">Processinig...</string>
    <string name="wizard_example_watch_now">Watch now</string>
    <string name="wizard_example_later">Later</string>
    <string name="wizard_example_watch_now_clicked">\'Watch now\' clicked.</string>
    <string name="wizard_example_new_payment_guidance_title">New credit card</string>
    <string name="wizard_example_new_payment_guidance_description">Enter new credit card information here</string>
    <string name="wizard_example_input_credit">Input Payment Type</string>
    <string name="wizard_example_visa">Visa-%s</string>
    <string name="wizard_example_master">Master-%s</string>
    <string name="wizard_example_input_credit_wrong">Error: invalid credit card number</string>
    <string name="wizard_example_just_a_second">Just a second...</string>

    <!--user custom-->
    <string name="try_again">Try again, please.</string>
</resources>
